@@ -108,6 +108,7 @@ Please note that our support for the checkout block is still experimental and th
 * Fix - Currency switcher does not affect order confirmation screen prices.
 * Fix - Error when attempting to change the payment method for a subscription with UPE enabled.
 * Add - Multi-Currency track currency added.
+* Fix - Fill missing order_intent_info even if an exception occurs.
 
 = 3.0.0 - 2021-09-16 =
 * Add - Download deposits report in CSV.
